--- a/00_load_data.ipynb
+++ b/00_load_data.ipynb
@@ -6,16 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp core"
+    "# default_exp load_data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# module name here\n",
+    "# load_data\n",
     "\n",
-    "> API details."
+    "> Objective is to load and clean all data."
    ]
   },
   {
@@ -41,6 +41,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
